# dirganise

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
dirganise/: main.py
dirganise/utilities/: logutils.py
