[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
 
[project]
name = "dirganise"
version = "1.0.1"
authors = [
    { name = "Ilai", email = "dxvampi@gmail.com" }
]
description = "Organises a certain folder in a few seconds"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/dxvampi/dirganise"
"Source Code" = "https://github.com/dxvampi/dirganise"
 
[project.scripts]
dirganise = "dirganise.main:main"
 